@@ -3704,7 +3704,11 @@ void BaseGui::hidePanel() {
 }
 
 void BaseGui::displayGotoTime(int t) {
+#ifdef SEEKBAR_RESOLUTION
+	int jump_time = (int)core->mdat.duration * t / SEEKBAR_RESOLUTION;
+#else
 	int jump_time = (int)core->mdat.duration * t / 100;
+#endif
 	//QString s = tr("Jump to %1").arg( Helper::formatTime(jump_time) );
 	QString s = QString("Jump to %1").arg( Helper::formatTime(jump_time) );
 	statusBar()->showMessage( s, 1000 );
@@ -3717,11 +3721,19 @@ void BaseGui::displayGotoTime(int t) {
 void BaseGui::goToPosOnDragging(int t) {
 	if (pref->update_while_seeking) {
 #if ENABLE_DELAYED_DRAGGING
+		#ifdef SEEKBAR_RESOLUTION
+		core->goToPosition(t);
+		#else
 		core->goToPos(t);
+		#endif
 #else
 		if ( ( t % 4 ) == 0 ) {
 			qDebug("BaseGui::goToPosOnDragging: %d", t);
+			#ifdef SEEKBAR_RESOLUTION
+			core->goToPosition(t);
+			#else
 			core->goToPos(t);
+			#endif
 		}
 #endif
 	}
